--- a/data/projects.json
+++ b/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "Netflix Data Analysis",
+    "title": "LeDinhHieu_Projects",
     "short": "Exploratory analysis on Netflix titles, viewing trends and insights using Python (Pandas/Matplotlib).",
     "tags": [
       "Python",
